# polyjuice

./: .env.api_url  .gitattributes  .gitignore  CNAME  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  start.sh  styles.css  test.html  webpack.config.js  wrangler.example.toml
.github/workflows/: deploy.yml
js/: farcaster-entry.js  wallet.js  walletconnect-entry.js  walletconnect-modal-bundle.js  walletconnect-modal-entry.js  web3modal-bundle.js  web3modal-entry.js
public/.well-known/: README.md  farcaster.json
src/: analysis_loaders.rs  api.rs  chat.rs  components.rs  dashboard.rs  embed.rs  farcaster.rs  handlers.rs  headers.rs  icons.rs  main.rs  models.rs  pages.rs  payment.rs  services.rs  share.rs  views.rs  wallet.rs
src/pages/: about.rs  mod.rs  profile.rs
src/pages/annual_report/: components.rs  mod.rs  page.rs  sections.rs  utils.rs
worker/: .gitignore  Cargo.toml  README.md  index.js
worker/src/: lib.rs
