[package]
name = "polyjuice"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window", 
    "Document", 
    "HtmlElement", 
    "Element", 
    "DomTokenList", 
    "console", 
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlMetaElement",
    "HtmlHeadElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "CssStyleDeclaration",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
base64 = "0.21"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
polyendpoint-sdk = { git = "https://github.com/RyanKung/polyportal", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

