[package]
name = "polyjuice-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
worker = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rusttype = "0.9"
imageproc = "0.23"

